--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -16,3 +16,10 @@
         @content;
     }
 }
+
+@mixin grid($columnas, $espaciado) {
+    display: grid;
+    grid-template-columns: repeat($columnas, 1fr);
+    gap: $espaciado;
+
+}
