--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&family=Open+Sans&family=PT+Sans:wght@400;700&display=swap');
 @import "base/variables";
 @import "base/globales";
+@import "base/utilidades";
 @import "base/mixins";
 
 @import "layout/header";
