se agrego todo sobre el capitulo 23, la galeria abre una imagen grande y luego la cerramos, fijamos el body al hacer la imagen grande

--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -10,6 +10,10 @@ html {
 body {
     font-family: $fuentePrincipal;
     font-size: 1.6rem;
+
+    &.fijar-body {
+        overflow: hidden;
+    }
 }
 
 h1, h2, h3 {
