--- a/src/scss/layout/_galeria.scss
+++ b/src/scss/layout/_galeria.scss
@@ -6,9 +6,44 @@
     }
 }
 .galeria-imagenes {
-    display: flex;
     padding: 0;
     list-style: none;
-    flex-wrap: wrap;
-    gap: 2rem;
+    margin-top: $separacion;
+    @include grid(2, calc($separacion/2));
+
+    @include tablet {
+        @include grid(4, calc($separacion/3));
+    }
+    
+    @include desktop {
+        @include grid(6, calc($separacion/2));
+    }
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.471);
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
+}
+
+.btn-cerrar {
+    color: #fff;
+    font-weight: $bold;
+    font-size: 2rem;
+    background-color: rgb(2, 55, 37);
+    height: 5rem;
+    width: 5rem;
+    padding: 1rem;
+    border: .5rem solid rgb(1, 35, 24);
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    
+    &:hover {
+        cursor: pointer;
+    }
 }
