--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -10,3 +10,5 @@
 @import "layout/festival";
 @import "layout/lineup";
 @import "layout/galeria";
+@import "layout/boletos";
+@import "layout/footer";
