fijamos la barra de navegacion una vez que algun elemento no sea visible, estaremos observando el comportamiento del elemento con intersection observer

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -19,6 +19,12 @@
         }
         text-align: center;
     }
+
+    &.fijo {
+        position: fixed;
+        width: 100%;
+        box-shadow: 0 0 .5rem .4rem rgba(68, 68, 68, 0.514);
+    }
 }
 
 .navegacion-principal {
